samples/_failures_safe/1761265165_5a2b9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2eca4d98.c: In function ‘main’:
./samples/SAFE/__tmp_2eca4d98.c:175:9: error: expected expression at end of input
  175 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_2eca4d98.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2eca4d98.c:175:9: error: expected declaration or statement at end of input
